--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -5,6 +5,11 @@ spring:
   application:
     name: api-gateway
 
+  security:
+    user:
+      name: none
+      password: none
+
   cloud:
     gateway:
       server:
@@ -15,7 +20,9 @@ spring:
           globalcors:
             cors-configurations:
               '[/**]':
-                allowed-origins: "http://localhost:5173"
+                allowed-origins:
+                 - "http://localhost:5173"
+                 - "http://localhost:8080"
                 allowed-methods:
                   - GET
                   - POST
@@ -54,7 +61,7 @@ spring:
                 - name: RewritePath
                   args:
                     regexp: "/swagger(?<segment>/?.*)"
-                    replacement: "/swagger${segment}"
+                    replacement: "/swagger-ui${segment}"
 
             - id: ai-service
               uri: http://localhost:8000
